--- a/batch2/plik_dx11dr2_DS_v15_EE.ini
+++ b/batch2/plik_dx11dr2_DS_v15_EE.ini
@@ -1,6 +1,6 @@
 #clik likelihood file
 use_clik = T
-clik_params_plikEE= %DATASETDIR%plik_dx11dr2_DS_v15_EE.paramnames
+clik_params_plikEE= %DATASETDIR%high_l/plik/plik_dx11dr2_DS_v15_EE.paramnames
 
 clik_speed_plikEE = 6
 
