--- a/batch2/plik_dx11dr2_DS_v15_TE.ini
+++ b/batch2/plik_dx11dr2_DS_v15_TE.ini
@@ -1,7 +1,7 @@
 #clik likelihood file
 use_clik = T
 
-clik_params_plikTE= %DATASETDIR%plik_dx11dr2_DS_v15_TE.paramnames
+clik_params_plikTE= %DATASETDIR%high_l/plik/plik_dx11dr2_DS_v15_TE.paramnames
 
    
 clik_speed_plikTE = 5
