--- a/batch2/plik_dx11dr2_HM_v15_TT_bin1.ini
+++ b/batch2/plik_dx11dr2_HM_v15_TT_bin1.ini
@@ -1,6 +1,6 @@
 #clik likelihood file
 use_clik = T
-clik_params_plik= %DATASETDIR%plik_dx11dr2_HM_v15_TT.paramnames
+clik_params_plik= %DATASETDIR%high_l/plik/plik_dx11dr2_HM_v15_TT.paramnames
 
 
 clik_speed_plik = 5
