--- a/batch2/plik_dx11dr2_DS_v15_TT.ini
+++ b/batch2/plik_dx11dr2_DS_v15_TT.ini
@@ -1,6 +1,6 @@
 #clik likelihood file
 use_clik = T
-clik_params_plik= %DATASETDIR%clik/hi_l/plik/plik_dx11dr2_DS_v15_TT.paramnames
+clik_params_plik= %DATASETDIR%plik_dx11dr2_DS_v15_TT.paramnames
 clik_speed_plik = 5
 
 lmax_computed_cl = 2700
@@ -48,4 +48,4 @@ param[kgal143]=0.2831209E+02 0 400 14 14
 param[kgal143217]=0.3757673E+02 0 400 16 16
 param[kgal217]=0.9923914E+02 0 400 18 18
 
-clik_data_plik=%DATASETDIR%clik/plik_dx11dr2_DS_v15_TT.clik
+clik_data_plik=%DATASETDIR%clik/hi_l/plik/plik_dx11dr2_DS_v15_TT.clik
