--- a/batch2/plik_dx11dr2_HM_v15_EE.ini
+++ b/batch2/plik_dx11dr2_HM_v15_EE.ini
@@ -1,7 +1,7 @@
 #clik likelihood file
 use_clik = T
 
-clik_params_plikEE= %DATASETDIR%clik/hi_l/plik/plik_dx11dr2_HM_v15_EE.paramnames
+clik_params_plikEE= %DATASETDIR%plik_dx11dr2_HM_v15_EE.paramnames
 
 clik_speed_plikEE = 6
 
@@ -70,4 +70,4 @@ param[bleakEE217_3]=0 -100000 100000 0 0
 param[bleakEE217_4]=0 -100000 100000 0 0 
 
 
-clik_data_plikEE  = %DATASETDIR%clik/plik_dx11dr2_HM_v15_EE.clik
+clik_data_plikEE  = %DATASETDIR%clik/hi_l/plik/plik_dx11dr2_HM_v15_EE.clik
