--- a/batch2/plik_dx11dr2_HM_v15_TE.ini
+++ b/batch2/plik_dx11dr2_HM_v15_TE.ini
@@ -2,7 +2,7 @@
 use_clik = T
 
 
-clik_params_plikTE= %DATASETDIR%clik/hi_l/plik/plik_dx11dr2_HM_v15_TE.paramnames
+clik_params_plikTE= %DATASETDIR%plik_dx11dr2_HM_v15_TE.paramnames
 clik_speed_plikTE = 5
 lmax_computed_cl = 2700
 
@@ -71,4 +71,4 @@ param[bleakTE217_3]=0 -100000 100000 0 0
 param[bleakTE217_4]=0 -100000 100000 0 0 
 
 
-clik_data_plikTE  = %DATASETDIR%clik/plik_dx11dr2_HM_v15_TE.clik
+clik_data_plikTE  = %DATASETDIR%clik/hi_l/plik/plik_dx11dr2_HM_v15_TE.clik
