--- a/batch2/lowl.ini
+++ b/batch2/lowl.ini
@@ -1,7 +1,7 @@
 #clik likelihood file, when compiling with cliklike
 
 use_clik = T
-clik_data_commanderTT = %DATASETDIR%clik/commander_rc2_v1.1_l2_29_Ap.clik
+clik_data_commanderTT = %DATASETDIR%clik/low_l/commander/commander_rc2_v1.1_l2_29_B.clik
 clik_speed_commanderTT = 0
 clik_params_commanderTT = %DATASETDIR%planck_calib.paramnames
 
