tighten convergence, switch on use_nonlinear_lensing by default for all runs

--- a/batch2/common.ini
+++ b/batch2/common.ini
@@ -15,6 +15,9 @@ feedback = 1
 #Force computation of sigma_8 even if use_mpk = F
 get_sigma8 = T
 
+#This only has a small effect at very high L
+use_nonlinear_lensing = T
+
 #Temperature at which to Monte-Carlo
 temperature = 1
 
@@ -51,7 +54,7 @@ MPI_StartSliceSampling  = F
 
 #Can optionally also check for convergence of confidence limits (after MPI_Converge_Stop reached)
 #Can be good idea as small value of MPI_Converge_Stop does not (necessarily) imply good exploration of tails
-MPI_Check_Limit_Converge = F
+MPI_Check_Limit_Converge = T
 
 #if MPI_Check_Limit_Converge = T, give tail fraction to check (checks both tails):
 MPI_Limit_Converge = 0.025
