set lmin_store_all_cmb = 2500

--- a/batch2/params_CMB_defaults.ini
+++ b/batch2/params_CMB_defaults.ini
@@ -2,6 +2,9 @@
 #no zre prior in chains, can do later by importance sampling
 use_min_zre = 0
 
+lmin_store_all_cmb = 2500
+
+
 #CAMB parameters
 #If we are including tensors
 compute_tensors = F
