rename likelihood chi2 parameters chi2_XXX

--- a/batch2/getdist_common.ini
+++ b/batch2/getdist_common.ini
@@ -132,11 +132,11 @@ limits[omegam]=0 N
 limits[rBB] = 0 N
 limits[AT] = 0 N
 limits[ctlamp] = 0 N
-limits[BAO]=0 N
-limits[H070p6]=0 N
-limits[DR11LOWZ]=0 N
-limits[6DF]=0 N
-limits[MGS]=0 N
+limits[chi2_BAO]=0 N
+limits[chi2_H070p6]=0 N
+limits[chi2_DR11LOWZ]=0 N
+limits[chi2_6DF]=0 N
+limits[chi2_MGS]=0 N
 
 #all_limits sets all limitsxx for all variables to the same; can be useful for bins
 all_limits = 
