--- a/batch2/BAO_RSD.ini
+++ b/batch2/BAO_RSD.ini
@@ -1,6 +1,6 @@
 
-#bao_dataset[DR11CMASS_RSD_Beutler] = data/sdss_DR11CMASS_RSD_bao_Beutler.dataset
-bao_dataset[DR11CMASS_RSD_Samushia] = data/sdss_DR11CMASS_RSD_bao_Samushia.dataset
+#bao_dataset[DR11RSD] = data/sdss_DR11CMASS_RSD_bao_Beutler.dataset
+bao_dataset[DR11RSD] = data/sdss_DR11CMASS_RSD_bao_Samushia.dataset
 
 #include other BAO points except the one at z=0.57
 bao_dataset[DR11CMASS] = 
