--- a/batch2/lensing.ini
+++ b/batch2/lensing.ini
@@ -1,6 +1,6 @@
 
-cmb_dataset[PLENS]=  %DATASETDIR%planck_lensing/smica_g30_ftl_full_pp.dataset
-cmb_dataset_speed[PLENS] =-1
+cmb_dataset[lensing]=  %DATASETDIR%planck_lensing/smica_g30_ftl_full_pp.dataset
+cmb_dataset_speed[lensing] =-1
 
 use_nonlinear_lensing = T
 
