--- a/batch2/lowTEB.ini
+++ b/batch2/lowTEB.ini
@@ -4,8 +4,8 @@ use_clik = T
 
 clik_data_commanderTT = 
 
-clik_data_bflike = %DATASETDIR%clik/low_l/bflike/lowl_SMW_70_dx11d_2014_10_03_v5b_Ap.clik
-clik_speed_bflike = -1
-clik_params_bflike = %DATASETDIR%planck_calib.paramnames
+clik_data_lowTEB = %DATASETDIR%clik/low_l/bflike/lowl_SMW_70_dx11d_2014_10_03_v5b_Ap.clik
+clik_speed_lowTEB = -1
+clik_params_lowTEB = %DATASETDIR%planck_calib.paramnames
 
 DEFAULT(planck_calibration.ini)
