--- a/batch2/lowl.ini
+++ b/batch2/lowl.ini
@@ -1,9 +1,9 @@
 #clik likelihood file, when compiling with cliklike
 
 use_clik = T
-clik_data_commanderTT = %DATASETDIR%clik/low_l/commander/commander_rc2_v1.1_l2_29_B.clik
-clik_speed_commanderTT = 0
-clik_params_commanderTT = %DATASETDIR%planck_calib.paramnames
+clik_data_lowl= %DATASETDIR%clik/low_l/commander/commander_rc2_v1.1_l2_29_B.clik
+clik_speed_lowl = 0
+clik_params_lowl = %DATASETDIR%planck_calib.paramnames
 
 DEFAULT(planck_calibration.ini)
 
