--- a/batch2/abundances.ini
+++ b/batch2/abundances.ini
@@ -1,4 +1,4 @@
-abundance_dataset[Izo]= %DATASETDIR%Yp_Izotov2014.dataset
+abundance_dataset[Izotov]= %DATASETDIR%Yp_Izotov2014.dataset
 
 #Do not include Cooke, current AlterBBN grid is not accurate enough (rate issues etc)
 #abundance_dataset[Cooke]= %DATASETDIR%D_Cooke2013.dataset
