tidy up importance sampling settings; lensing no longer needs redo_theory

--- a/batch2/getdist_common.ini
+++ b/batch2/getdist_common.ini
@@ -137,6 +137,7 @@ limits[chi2_H070p6]=0 N
 limits[chi2_DR11LOWZ]=0 N
 limits[chi2_6DF]=0 N
 limits[chi2_MGS]=0 N
+limits[chi2_prior]=0 N
 
 #all_limits sets all limitsxx for all variables to the same; can be useful for bins
 all_limits = 
