add SZ priors to clik T .ini

--- a/batch2/plik_dx11dr2_HM_v16_TTTEEE.ini
+++ b/batch2/plik_dx11dr2_HM_v16_TTTEEE.ini
@@ -14,6 +14,12 @@ propose_matrix = planck_covmats/plik_dx11dr2_HM_v16_TTTEEE.covmat
 INCLUDE(plik_v16_priors.ini)
 ####################
 
+####SZ prior
+linear_combination[SZComb] = aksz asz143
+linear_combination_weights[SZComb] = 1 1.6
+prior[SZComb] = 9.5 3
+
+
 #Foregrounds and Calibrations
 #TT
 param[cal0]=1 0 5 0.001 0.001
