--- a/batch2/plik_dx11dr2_HM_v16_TT.ini
+++ b/batch2/plik_dx11dr2_HM_v16_TT.ini
@@ -15,6 +15,11 @@ propose_matrix = planck_covmats/plik_dx11dr2_HM_v16_TT.covmat
 INCLUDE(plik_v16_priors.ini)
 ####################
 
+####SZ prior
+linear_combination[SZComb] = aksz asz143
+linear_combination_weights[SZComb] = 1 1.6
+prior[SZComb] = 9.5 3
+
 
 ####Calibrations and Foregrounds
 param[cal0]=1 0 5 0.001 0.001
