--- a/disttest.ini
+++ b/disttest.ini
@@ -1,12 +1,10 @@
 DEFAULT(batch2/getdist_common.ini)
 
-file_root = chains/v65FC
+file_root = C:\tmp\Planck\testchains\pk+WL_DE_noscale
 ignore_rows=0.3
 
-compare_num = 1
-compare1 = base_v65F_lowl_lowLike
-
-plot_ext = py
-
 #plot_data_dir is where output plotting files are stored. The directory must exist.
-plot_data_dir=./plot_data
+plot_data_dir=z:\plot_data
+
+plot_2D_num=1
+plot1=MGeta MGmu
