--- a/batch2/plik_dx11dr2_HM_v16_TTTEEE.ini
+++ b/batch2/plik_dx11dr2_HM_v16_TTTEEE.ini
@@ -31,7 +31,7 @@ param[galfEEindex]=-2.4 -10 10 0 0
 param[galfTE100]=0.2353655E+00 0 10 0.1 0.1
 param[galfTE100143]=0.2350663E+00 0 10 0.1 0.02
 param[galfTE100217]=0.4656940E+00 0 10 0.2 0.2
-param[galfTE143]=0.1705078E+00 0 10 0.1 0.03W
+param[galfTE143]=0.1705078E+00 0 10 0.1 0.03
 param[galfTE143217]=0.6187748E+00 0 10 0.1 0.1
 param[galfTE217]=0.1821793E+01 0 10 0.2 0.2
 
