--- a/batch2/lowEB.ini
+++ b/batch2/lowEB.ini
@@ -1,10 +1,10 @@
-#clik likelihood file, when compiling with cliklike
+#low EB only, no T
 
 use_clik = T
 
-clik_data_lowTEB = %DATASETDIR%clik/low_l/bflike/lowl_QU_70_dx11d_2014_10_03_v5c_Ap.clik
+clik_data_lowEB = %DATASETDIR%clik/low_l/bflike/lowl_QU_70_dx11d_2014_10_03_v5c_Ap.clik
                                                 
-clik_speed_lowTEB = -1
-clik_params_lowTEB = %DATASETDIR%planck_calib.paramnames
+clik_speed_lowEB = -1
+clik_params_lowEB = %DATASETDIR%planck_calib.paramnames
 
 DEFAULT(planck_calibration.ini)
