--- a/batch2/plik_lite_TT.ini
+++ b/batch2/plik_lite_TT.ini
@@ -2,7 +2,7 @@ use_clik = T
 clik_params_plikLite = %DATASETDIR%planck_calib.paramnames
 clik_speed_plikLite = 5
 clik_data_plikLike  = %DATASETDIR%clik/hi_l/plik_lite/plik_lite_v16_TT.clik
-
+sampling_method = 1
 DEFAULT(planck_calibration.ini)       
 
 
