--- a/batch2/plik_lite_TTTEEE.ini
+++ b/batch2/plik_lite_TTTEEE.ini
@@ -1,8 +1,4 @@
-use_clik = T
-clik_params_plikLite = %DATASETDIR%planck_calib.paramnames
-clik_speed_plikLite = 5
 clik_data_plikLike  = %DATASETDIR%clik/hi_l/plik_lite/plik_lite_v16_TTTEEE.clik
-
-DEFAULT(planck_calibration.ini)       
+DEFAULT(planck_like_TT.ini)       
 
 
