fix plik_lite .ini

--- a/batch2/plik_lite_TT.ini
+++ b/batch2/plik_lite_TT.ini
@@ -1,7 +1,7 @@
 use_clik = T
 clik_params_plikLite = %DATASETDIR%planck_calib.paramnames
 clik_speed_plikLite = 5
-clik_data_plikLike  = %DATASETDIR%clik/hi_l/plik_lite/plik_lite_v16_TT.clik
+clik_data_plikLite  = %DATASETDIR%clik/hi_l/plik_lite/plik_lite_v16_TT.clik
 sampling_method = 1
 DEFAULT(planck_calibration.ini)       
 
