--- a/batch2/plik_lite_TTTEEE.ini
+++ b/batch2/plik_lite_TTTEEE.ini
@@ -1,4 +1,4 @@
-clik_data_plikLike  = %DATASETDIR%clik/hi_l/plik_lite/plik_lite_v16_TTTEEE.clik
-DEFAULT(planck_like_TT.ini)       
+clik_data_plikLite  = %DATASETDIR%clik/hi_l/plik_lite/plik_lite_v16_TTTEEE.clik
+DEFAULT(plik_lite_TT.ini)       
 
 
