turn off block_semi_fast by default; add warning if use_nonlinear_lensing and block_semi_fast

--- a/batch2/common.ini
+++ b/batch2/common.ini
@@ -17,6 +17,8 @@ get_sigma8 = T
 
 #This only has a small effect at very high L
 use_nonlinear_lensing = T
+#if using non-linear lensing, better turn of power spectrum fast/slow since is now non-linear
+block_semi_fast = F
 
 #Temperature at which to Monte-Carlo
 temperature = 1
