--- a/camb/base_plikHM_TT_lowTEB_lensing_params.ini
+++ b/camb/base_plikHM_TT_lowTEB_lensing_params.ini
@@ -9,7 +9,7 @@ l_accuracy_boost = 1
 high_accuracy_default = T
 do_nonlinear = 2
 l_max_scalar = 8000
-k_eta_max_scalar = 30000
+k_eta_max_scalar = 50000
 do_lensing = T
 lensing_method = 1
 w = -1.0
@@ -25,10 +25,11 @@ helium_fraction = 0.2449302
 massless_neutrinos = 2.03066666667
 nu_mass_eigenstates = 1
 massive_neutrinos = 1
-share_delta_neff = T
+share_delta_neff = F
 nu_mass_degeneracies = 1.01533333333
 nu_mass_fractions = 1
 transfer_high_precision = F
+halofit_version =            4
 DebugParam =   0.000000000000000E+000
 Alens =    1.00000000000000
 reionization = T
@@ -63,7 +64,7 @@ accurate_polarization = T
 accurate_reionization = T
 accurate_BB = F
 derived_parameters = T
-version_check = Jul14
+version_check = Sept14
 do_late_rad_truncation = T
 feedback_level = 1
 massive_nu_approx = 1
