--- a/batch2/plik_dx11dr2_HM_v17_TT.ini
+++ b/batch2/plik_dx11dr2_HM_v17_TT.ini
@@ -15,35 +15,35 @@ propose_matrix = planck_covmats/plik_dx11dr2_HM_v17_TT.covmat
 INCLUDE(plik_v17_priors.ini)
 ####################
 
+####SZ prior
+linear_combination[SZComb] = aksz asz143
+linear_combination_weights[SZComb] = 1 1.6
+prior[SZComb] = 9.5 3
+
 
 ####Calibrations and Foregrounds
-param[cal0]=1 0 5 0.001 0.001
-param[cal2]=0.99501 0 5 0.001 0.001
+param[cal0]=1 0 3 0.001 0.0005
+param[cal2]=0.99501 0 3 0.001 0.0005
 
-param[acib217] = 0.5622207E+02 0 200 10 10
-param[ncib]=-1.3 -10 10 0 0
+param[acib217] = 60 0 200 10 1.2
+param[ncib]=-1.3
 
 param[xi] =0 0 1 0.1 0.1
 
-
-param[aps100] =  0.2027053E+03 0 400 24 24
-param[aps100143] = 39 0 400 10 10
-param[aps100217] = 39 0 400 10 10
-param[aps143] = 0.2190615E+02  0 400 10 10
-param[aps143217] = 0.2577444E+02 0 400 12 12
-param[aps217] = 0.9514113E+02  0 400 13 13
+param[aps100] =  200 0 400 24 17
+param[aps143] = 40  0 400 10 3
+param[aps143217] = 40 0 400 12 2
+param[aps217] = 100  0 400 13 2.5
 
 
-param[asz143]= 0.7398164E+01 0 10 2 2
-param[aksz]=0.5554051E+01 0 10 3 3
+param[asz143]= 0.7398164E+01 0 10 2 0.6
+param[aksz]=0.5554051E+01 0 10 3 1
 
-param[kgal100]=0.2176074E+02 0 400 13 13
-param[kgal100143]=45 0 400 20 20
-param[kgal100217]=45 0 400 20 20
-param[kgal143]=0.2831209E+02 0 400 14 14
-param[kgal143217]=0.3757673E+02 0 400 16 16
-param[kgal217]=0.9923914E+02 0 400 18 18
 
+param[kgal100]=7 0 50 2 1
+param[kgal143]=9 0 50 2 1
+param[kgal143217]=20 0 100 4 1.5
+param[kgal217]=83 0 400 15 2
 
 
 clik_data_plik  = %DATASETDIR%clik/hi_l/plik/plik_dx11dr2_HM_v17_TT.clik
