updated SZ module

--- a/batch2/SZalone.ini
+++ b/batch2/SZalone.ini
@@ -13,3 +13,12 @@ prior_clash = T
 #prior on ns and omegabh2 from the CMB to be used if there is no CMB 
 prior_ns=T
 prior_omegabh2=T
+
+#priors on SZ nuisance parameters
+prior_scatter_SZ=T
+prior_alpha_SZ=T
+prior_ystar_SZ=T
+
+#choice to use 1D (dN/dz) or 2D (dN/dzdq) likelihood
+1D=T  
+#2D=T
