--- a/disttest.ini
+++ b/disttest.ini
@@ -4,7 +4,7 @@ file_root = C:\tmp\Planck\testchains\pk+WL_DE_noscale
 ignore_rows=0.3
 
 #plot_data_dir is where output plotting files are stored. The directory must exist.
-plot_data_dir=z:\plot_data
+plot_data_dir=./plot_data
 
-plot_2D_num=1
-plot1=MGeta MGmu
+out_dir = ./
+no_tests=T
