refactorings, but problem wiht margestats

--- a/disttest.ini
+++ b/disttest.ini
@@ -1,10 +1,11 @@
 DEFAULT(batch2/getdist_common.ini)
 
-file_root = C:\tmp\Planck\testchains\pk+WL_DE_noscale
+file_root = C:\tmp\Planck\final_Nov14\base\plikHM_TT_lowTEB\base_plikHM_TT_lowTEB
+#C:\tmp\Planck\final_nominal\PLA\base\planck_lowl_lowLike\base_planck_lowl_lowLike
 ignore_rows=0.3
 
 #plot_data_dir is where output plotting files are stored. The directory must exist.
-plot_data_dir=./plot_data
+plot_data_dir=z://plot_data
 
 out_dir = ./
-no_tests=T
+no_tests=F
