fix getdist bug, other tweaks

--- a/disttest.ini
+++ b/disttest.ini
@@ -1,8 +1,8 @@
 DEFAULT(batch2/getdist_common.ini)
 
-file_root = C:\tmp\Planck\final_Nov14\base\plikHM_TT_lowTEB\base_plikHM_TT_lowTEB
+file_root = C:\tmp\Planck\final_Nov14\base\plikHM_TT_lowTEB\base_plikHM_TT_lowTEB_post_BAO
 #C:\tmp\Planck\final_nominal\PLA\base\planck_lowl_lowLike\base_planck_lowl_lowLike
-ignore_rows=0.3
+ignore_rows=0
 
 #plot_data_dir is where output plotting files are stored. The directory must exist.
 plot_data_dir=z://plot_data
