--- a/disttest.ini
+++ b/disttest.ini
@@ -7,6 +7,10 @@ ignore_rows=0
 #plot_data_dir is where output plotting files are stored. The directory must exist.
 plot_data_dir=z://plot_data
 
+plot_2D_num = 1
+plot1 = ns omegabh2
+
+
 out_dir = ./
 no_tests=T
 no_plots=T
