--- a/source/Makefile
+++ b/source/Makefile
@@ -143,7 +143,7 @@ LINKFLAGS += -L$(highL) -lhigh
 INCLUDE += $(IFLAG)$(highL)
 endif
 
-PLANCKLIKEFILES=
+PLANCKLIKEFILES= $(OUTPUT_DIR)/CMB_BK_Planck.o
 
 
 ifneq ($(PLANCKLIKE),)
@@ -232,7 +232,7 @@ $(OUTPUT_DIR)/CosmologyTypes.o: $(OUTPUT_DIR)/settings.o $(OUTPUT_DIR)/likelihoo
 $(OUTPUT_DIR)/Likelihood_Cosmology.o: $(OUTPUT_DIR)/Calculator_Cosmology.o $(OUTPUT_DIR)/CosmoTheory.o
 $(OUTPUT_DIR)/CMBlikes.o: $(OUTPUT_DIR)/Likelihood_Cosmology.o
 $(OUTPUT_DIR)/CMB_BK_Planck.o: $(OUTPUT_DIR)/CMBlikes.o
-$(OUTPUT_DIR)/CMB.o: $(OUTPUT_DIR)/CMBlikes.o $(OUTPUT_DIR)/CMB_BK_Planck.o $(PLANCKLIKEFILES)
+$(OUTPUT_DIR)/CMB.o: $(OUTPUT_DIR)/CMBlikes.o $(PLANCKLIKEFILES)
 $(OUTPUT_DIR)/bbn.o: $(OUTPUT_DIR)/settings.o $(OUTPUT_DIR)/likelihood.o $(OUTPUT_DIR)/Interpolation.o
 $(OUTPUT_DIR)/mpk.o: $(OUTPUT_DIR)/CosmoTheory.o $(OUTPUT_DIR)/Likelihood_Cosmology.o
 $(OUTPUT_DIR)/wigglez.o: $(OUTPUT_DIR)/mpk.o
