add skeleton for bandpasses and beta parameter; bandpass files from Core; incomplete and untested

--- a/batch2/BKPlanck.ini
+++ b/batch2/BKPlanck.ini
@@ -1,4 +1,5 @@
 param[BBdust] = 0.00001 0. 15. 0.1 0.1
 param[BBsync] = 0.
 param[BBalphadust] = -0.4 -0.8 0. 0.005 0.005
+param[BBbetadust] = 1.59
 cmb_dataset[BKPLANCK]=%DATASETDIR%BICEP/BK_Planck.dataset
