Added foreground parameters for MCMC.
Added to BKPLAN.paramnames: Tdust, alphasync, betasync, dustsynccorr
Updated default settings in BKPlanck.ini to match "base model".
Modified CMB_BK_Planck.f90 to get the parameters from DataParams vector.

--- a/batch2/BKPlanck.ini
+++ b/batch2/BKPlanck.ini
@@ -1,5 +1,9 @@
 param[BBdust] = 0.00001 0. 15. 0.1 0.1
 param[BBsync] = 0.
-param[BBalphadust] = -0.4 -0.8 0. 0.005 0.005
-param[BBbetadust] = 1.59
+param[BBalphadust] = -0.42
+param[BBbetadust] = 1.59 1.04 2.14 0.02 0.02
+param[BBTdust] = 19.6
+param[BBalphasync] = -0.6
+param[BBbetasync] = -3.3
+param[BBdustsynccorr] = 0.0
 cmb_dataset[BKPLANCK]=%DATASETDIR%BICEP/BK_Planck.dataset
