Modified batch2/BKPlanck.ini so that default values for BKPlanck likelihood will match the "fiducial model" from Section III.B of the b2p paper.

--- a/batch2/BKPlanck.ini
+++ b/batch2/BKPlanck.ini
@@ -1,3 +1,33 @@
+# BICEP2-Keck Array-Planck joint likelihood.
+#
+# Default settings follow "fiducial analysis" described in Section III.B
+# of **ADD PAPER REFERENCE HERE**
+#   * Uses BICEP2+KECK, P217, and P353 maps only.
+#   * Uses BB only
+#   * Uses first five ell bins only.
+#   * Uses detector-set split for Planck single frequency bandpowers.
+#   * Foreground parameters are fixed to fiducial values, except for 
+#     BBdust (dust power at ell=80, nu=353 GHz) and BBbetadust (dust
+#     frequency scaling parameter).
+
+# Default Planck data split = detector set
+cmb_dataset[BKPLANCK]=%DATASETDIR%BKPlanck_detset_comb_tensor/BKPlanck_detset_comb_tensor.dataset
+# Switch to year split if you want to include Planck LFI channels 
+# (as in synchrotron item of Section III.C)
+# cmb_dataset[BKPLANCK]=%DATASETDIR%BKPlanck_year_comb_tensor/BKPlanck_year_comb_tensor.dataset
+
+# Choose B2+KECK, P217, and P353.
+cmb_dataset[BKPLANCK,maps_use] = B2K_B P217_B P353_B
+
+# Use B-modes only.
+cmb_dataset[BKPLANCK,fields_use] = B
+
+# Use first five ell bins.
+cmb_dataset[BKPLANCK,use_min] = 1
+cmb_dataset[BKPLANCK,use_max] = 5
+
+# Foreground parameters used for fiducial model.
+# All parameters fixed except for BBdust and BBbetadust.
 param[BBdust] = 0.00001 0. 15. 0.1 0.1
 param[BBsync] = 0.
 param[BBalphadust] = -0.42
@@ -6,4 +36,3 @@ param[BBTdust] = 19.6
 param[BBalphasync] = -0.6
 param[BBbetasync] = -3.3
 param[BBdustsynccorr] = 0.0
-cmb_dataset[BKPLANCK]=%DATASETDIR%BICEP/BK_Planck.dataset
