makePlots.py runs without getdist; PLA scripts

--- a/batch2/getdist_common.ini
+++ b/batch2/getdist_common.ini
@@ -117,7 +117,7 @@ matlab_colscheme =
 #Parameters to use. If unspecified use all parameters which have labels.
 #plot_params = omegabh2 omegach2 tau ns
 
-#marker[x] adds vertical line to MatLab 1D plot
+#marker[x] adds vertical line to 1D plot
 marker[nrun] = 0
 
 #Need to give limits if prior cuts off distribution where not very small
