auto-name parameter for generic

--- a/params_generic.ini
+++ b/params_generic.ini
@@ -17,11 +17,11 @@ action = 0
 #You can either use numbered parameters, or, usually better, define a parameter name file as below
 num_theory_params = 2
 #e.g. for 2D Gaussian
-param1 = 0 -20 20 1 1
-param2 = 0 -20 20 1 1
+param[param1] = 0 -20 20 1 1
+param[param2] = 0 -20 20 1 1
 
 #alternative using parameter names from your generic_example.paramnames file
-#ParamNamesFile = params_generic.paramnames
+#ParamNamesFile = paramnames/params_generic.paramnames
 #param[mypar1] = 0 -20 20 1 1
 #param[mypar2] = 0 -20 20 1 1
 
