--- a/tests/Makefile
+++ b/tests/Makefile
@@ -4,4 +4,5 @@ UTILS = $(OUTPUT_DIR)/MiscUtils.o $(OUTPUT_DIR)/ArrayUtils.o $(OUTPUT_DIR)/Strin
  $(OUTPUT_DIR)/RandUtils.o $(OUTPUT_DIR)/ObjectLists.o $(OUTPUT_DIR)/Interpolation.o
 
 default:
+	cd ../source && make cosmomc_debug OUTPUT_DIR=Debug BUILD=NOMPI
 	gfortran -J$(OUTPUT_DIR) $(UTILS) ObjectLists_tests.f90 interpolation_tests.f90 general_unittests.f90
