Updated batch2/BKPlanck.ini to use dust fiducial model by default. Also, added Gaussian prior on beta_dust by default.

--- a/batch2/BKPlanck.ini
+++ b/batch2/BKPlanck.ini
@@ -11,16 +11,13 @@
 #     frequency scaling parameter).
 
 # Default Planck data split = detector set
-cmb_dataset[BKPLANCK]=%DATASETDIR%BKPlanck_detset_comb_tensor/BKPlanck_detset_comb_tensor.dataset
+cmb_dataset[BKPLANCK]=%DATASETDIR%BKPlanck_detset_comb_dust/BKPlanck_detset_comb_dust.dataset
 # Switch to year split if you want to include Planck LFI channels 
 # (as in synchrotron item of Section III.C)
-# cmb_dataset[BKPLANCK]=%DATASETDIR%BKPlanck_year_comb_tensor/BKPlanck_year_comb_tensor.dataset
+# cmb_dataset[BKPLANCK]=%DATASETDIR%BKPlanck_year_comb_dust/BKPlanck_year_comb_dust.dataset
 
-# Choose B2+KECK, P217, and P353.
+# Choose B2+KECK, P217, and P353, B-modes only.
 cmb_dataset[BKPLANCK,maps_use] = B2K_B P217_B P353_B
-
-# Use B-modes only.
-cmb_dataset[BKPLANCK,fields_use] = B
 
 # Use first five ell bins.
 cmb_dataset[BKPLANCK,use_min] = 1
@@ -36,3 +33,6 @@ param[BBTdust] = 19.6
 param[BBalphasync] = -0.6
 param[BBbetasync] = -3.3
 param[BBdustsynccorr] = 0.0
+
+# Gaussian prior on BBbetadust: center value = 1.59, width = 0.11
+prior[BBbetadust] = 1.59 0.11
