--- a/batch2/BKPlanck.ini
+++ b/batch2/BKPlanck.ini
@@ -36,3 +36,5 @@ param[BBTdust] = 19.6
 param[BBalphasync] = -0.6
 param[BBbetasync] = -3.3
 param[BBdustsynccorr] = 0.0
+param[EEtoBB_dust] = 1. 1. 3. 0.1 0.1 
+param[EEtoBB_sync] = 1. 1. 3. 0.1 0.1 
