--- a/batch2/BKPlanck.ini
+++ b/batch2/BKPlanck.ini
@@ -36,8 +36,8 @@ param[BBTdust] = 19.6
 param[BBalphasync] = -0.6
 param[BBbetasync] = -3.3
 param[BBdustsynccorr] = 0.0
-param[EEtoBB_dust] = 1. 1. 3. 0.1 0.1 
-param[EEtoBB_sync] = 1. 1. 3. 0.1 0.1 
+param[EEtoBB_dust] = 2
+param[EEtoBB_sync] = 2
 
 # Gaussian prior on BBbetadust: center value = 1.59, width = 0.11
 prior[BBbetadust] = 1.59 0.11
