--- a/batch2/BKPlanck.ini
+++ b/batch2/BKPlanck.ini
@@ -1,14 +1,18 @@
-# BICEP2-Keck Array-Planck joint likelihood.
+# BICEP2-Keck Array-Planck joint likelihood: Data selection and foregrounds
 #
-# Default settings follow "fiducial analysis" described in Section III.B
+# Default settings for data selection and foregrounds of the 
+# "fiducial analysis" described in Section III.B
 # of **ADD PAPER REFERENCE HERE**
+#   * Uses detector-set split for Planck single frequency bandpowers.
 #   * Uses BICEP2+KECK, P217, and P353 maps only.
 #   * Uses BB only
 #   * Uses first five ell bins only.
-#   * Uses detector-set split for Planck single frequency bandpowers.
 #   * Foreground parameters are fixed to fiducial values, except for 
 #     BBdust (dust power at ell=80, nu=353 GHz) and BBbetadust (dust
 #     frequency scaling parameter).
+#
+# Note: See BKPlanckonly.ini and notes therein to reproduce the 
+#       "fiducial analysis" and variations thereof
 
 # Default Planck data split = detector set
 cmb_dataset[BKPLANCK]=%DATASETDIR%BKPlanck_detset_comb_dust/BKPlanck_detset_comb_dust.dataset
@@ -16,7 +20,7 @@ cmb_dataset[BKPLANCK]=%DATASETDIR%BKPlanck_detset_comb_dust/BKPlanck_detset_comb
 # (as in synchrotron item of Section III.C)
 # cmb_dataset[BKPLANCK]=%DATASETDIR%BKPlanck_year_comb_dust/BKPlanck_year_comb_dust.dataset
 
-# Choose B2+KECK, P217, and P353, B-modes only.
+# Choose B2+KECK, P217, and P353
 cmb_dataset[BKPLANCK,maps_use] = B2K_B P217_B P353_B
 
 # BKPlanck maps to use (for instance B-modes only):
@@ -28,7 +32,7 @@ cmb_dataset[BKPLANCK,use_max] = 5
 
 # Foreground parameters used for fiducial model.
 # All parameters fixed except for BBdust and BBbetadust.
-param[BBdust] = 0.00001 0. 15. 0.1 0.1
+param[BBdust] = 3 0 15 0.1 0.1
 param[BBsync] = 0.
 param[BBalphadust] = -0.42
 param[BBbetadust] = 1.59 1.04 2.14 0.02 0.02
