--- a/batch2/BKPlanckonly.ini
+++ b/batch2/BKPlanckonly.ini
@@ -11,8 +11,10 @@
 #     frequency scaling parameter).
 #   * Invokes the cosmological parameters as used in the "fiducial analysis"
 #
-# .ini files for the "Variations from the fiducial data set and model"
-# Section III.C and Figs. 7,8 and 9 are available on http://bicepkeck.org/
+# .ini files for the "fiducial" analysis, "variations from the fiducial data set and model"
+# Sections III.C,III.B and Figs. 6,7,8 and 9 of 
+# **ADD PAPER REFERENCE HERE**
+# as well as matching .ini files for getdist are available on http://bicepkeck.org/
 
 # Get default data set and foreground parameters
 DEFAULT(BKPlanck.ini)
