--- a/batch2/BKPlanck.ini
+++ b/batch2/BKPlanck.ini
@@ -20,11 +20,8 @@ cmb_dataset[BKPLANCK]=%DATASETDIR%BKPlanck_detset_comb_dust/BKPlanck_detset_comb
 # (as in synchrotron item of Section III.C)
 # cmb_dataset[BKPLANCK]=%DATASETDIR%BKPlanck_year_comb_dust/BKPlanck_year_comb_dust.dataset
 
-# Choose B2+KECK, P217, and P353
+# Choose B2+KECK, P217 and P353 B-modes
 cmb_dataset[BKPLANCK,maps_use] = B2K_B P217_B P353_B
-
-# BKPlanck maps to use (for instance B-modes only):
-cmb_dataset[BKPLANCK,fields_use] = B
 
 # Use first five ell bins.
 cmb_dataset[BKPLANCK,use_min] = 1
