--- a/batch2/BKPlanckonly.ini
+++ b/batch2/BKPlanckonly.ini
@@ -1,7 +1,12 @@
-# BICEP2-Keck Array-Planck joint likelihood: Fiducial Analysis
+# BICEP2/Keck Array and Planck Joint Analysis January 2015
+# The BICEP2/Keck and Planck Collaborations, A Joint Analysis of BICEP2/Keck Array and Planck Data
+# http://bicepkeck.org/
+#
+# File: BKPlanckonly.ini 
+# Date: 2015-01-27
 #
 # Default settings for of the "fiducial analysis" described in Section III.B and Fig.6
-# of **ADD PAPER REFERENCE HERE**
+# of the Joint Analysis paper
 #   * Uses detector-set split for Planck single frequency bandpowers.
 #   * Uses BICEP2+KECK, P217, and P353 maps only.
 #   * Uses BB only
@@ -9,11 +14,10 @@
 #   * Foreground parameters are fixed to fiducial values, except for 
 #     BBdust (dust power at ell=80, nu=353 GHz) and BBbetadust (dust
 #     frequency scaling parameter).
-#   * Invokes the cosmological parameters as used in the "fiducial analysis"
+#   * Invokes the cosmological parameters as used in the Joint Analysis
 #
 # .ini files for the "fiducial" analysis, "variations from the fiducial data set and model"
-# Sections III.C,III.B and Figs. 6,7,8 and 9 of 
-# **ADD PAPER REFERENCE HERE**
+# Sections III.B,III.C and Figs. 6,7,8 and 9 of the Joint Analysis paper
 # as well as matching .ini files for getdist are available on http://bicepkeck.org/
 
 # Get default data set and foreground parameters
