Add comments to headers of BKPlanck.ini, BKPlanckonly.ini

--- a/batch2/BKPlanck.ini
+++ b/batch2/BKPlanck.ini
@@ -1,8 +1,15 @@
-# BICEP2-Keck Array-Planck joint likelihood: Data selection and foregrounds
+# BICEP2/Keck Array and Planck Joint Analysis January 2015 Data Products
+# The BICEP2/Keck and Planck Collaborations, A Joint Analysis of BICEP2/Keck Array and Planck Data
+# http://bicepkeck.org/
+#
+# File: BKPlanck.ini 
+# Date: 2015-01-27
+#
+# BICEP2/Keck Array/Planck joint likelihood: Data selection and foregrounds
 #
 # Default settings for data selection and foregrounds of the 
-# "fiducial analysis" described in Section III.B
-# of **ADD PAPER REFERENCE HERE**
+# "fiducial analysis" described in Section III B
+# of A Joint Analysis of BICEP2/Keck Array and Planck Data
 #   * Uses detector-set split for Planck single frequency bandpowers.
 #   * Uses BICEP2+KECK, P217, and P353 maps only.
 #   * Uses BB only
