--- a/batch2/BKPlanckonly.ini
+++ b/batch2/BKPlanckonly.ini
@@ -1,7 +1,14 @@
-# BICEP2-Keck Array-Planck joint likelihood: Fiducial Analysis
+# BICEP2/Keck Array and Planck Joint Analysis January 2015 Data Products
+# The BICEP2/Keck and Planck Collaborations, A Joint Analysis of BICEP2/Keck Array and Planck Data
+# http://bicepkeck.org/
 #
-# Default settings for of the "fiducial analysis" described in Section III.B and Fig.6
-# of **ADD PAPER REFERENCE HERE**
+# File: BKPlanckonly.ini
+# Date: 2015-01-27
+#
+# BICEP2/Keck Array/Planck joint likelihood: Fiducial Analysis
+#
+# Default settings for the "fiducial analysis" described in Section III B and Figure 6
+# of A Joint Analysis of BICEP2/Keck Array and Planck Data
 #   * Uses detector-set split for Planck single frequency bandpowers.
 #   * Uses BICEP2+KECK, P217, and P353 maps only.
 #   * Uses BB only
@@ -12,8 +19,8 @@
 #   * Invokes the cosmological parameters as used in the "fiducial analysis"
 #
 # .ini files for the "fiducial" analysis, "variations from the fiducial data set and model"
-# Sections III.C,III.B and Figs. 6,7,8 and 9 of 
-# **ADD PAPER REFERENCE HERE**
+# described in Sections III B, III C and Figures 6, 7, 8, and 9 of 
+# A Joint Analysis of BICEP2/Keck Array and Planck Data
 # as well as matching .ini files for getdist are available on http://bicepkeck.org/
 
 # Get default data set and foreground parameters
