--- a/batch2/BKPlanckonly.ini
+++ b/batch2/BKPlanckonly.ini
@@ -5,8 +5,8 @@
 # File: BKPlanckonly.ini 
 # Date: 2015-01-27
 #
-# Default settings for of the "fiducial analysis" described in Section III.B and Fig.6
-# of the Joint Analysis paper
+# Default settings for data selection, foregrounds and cosmological parameters of the 
+# "fiducial analysis" described in Section III.B of the Joint Analysis paper
 #   * Uses detector-set split for Planck single frequency bandpowers.
 #   * Uses BICEP2+KECK, P217, and P353 maps only.
 #   * Uses BB only
@@ -16,9 +16,12 @@
 #     frequency scaling parameter).
 #   * Invokes the cosmological parameters as used in the Joint Analysis
 #
-# .ini files for the "fiducial" analysis, "variations from the fiducial data set and model"
-# Sections III.B,III.C and Figs. 6,7,8 and 9 of the Joint Analysis paper
-# as well as matching .ini files for getdist are available on http://bicepkeck.org/
+# Note: See BKPlanck_01_fiducial.ini to have a full running CosmoMC setup that
+#       invokes this ini file.
+#
+# Note: .ini files for the "variations from the fiducial data set and model"
+#       Sections III.C and Figs. 7,8 and 9 of the Joint Analysis paper
+#       as well as matching .ini files for getdist are available on http://bicepkeck.org/
 
 # Get default data set and foreground parameters
 DEFAULT(BKPlanck.ini)
