--- a/batch2/BKPlanckonly.ini
+++ b/batch2/BKPlanckonly.ini
@@ -18,10 +18,13 @@
 #     frequency scaling parameter).
 #   * Invokes the cosmological parameters as used in the Joint Analysis
 #
-# .ini files for the "fiducial" analysis, "variations from the fiducial data set and model"
-# described in Sections III B, III C and Figures 6, 7, 8, and 9 of 
-# A Joint Analysis of BICEP2/Keck Array and Planck Data
-# as well as matching .ini files for getdist are available on http://bicepkeck.org/
+# Note: See BKPlanck_01_fiducial.ini to have a full running CosmoMC setup that
+#       invokes this .ini file.
+#
+# Note: .ini files for the "variations from the fiducial data set and model"
+#       described in Secs. III C and Figs. 7, 8, and 9 of 
+#       A Joint Analysis of BICEP2/Keck Array and Planck Data
+#       as well as matching .ini files for getdist are available on http://bicepkeck.org/
 
 # Get default data set and foreground parameters
 DEFAULT(BKPlanck.ini)
