small adjustment to headers

--- a/batch2/BKPlanck.ini
+++ b/batch2/BKPlanck.ini
@@ -5,7 +5,7 @@
 # File: BKPlanck.ini 
 # Date: 2015-01-27
 #
-# BICEP2/Keck Array/Planck joint likelihood: Data selection and foregrounds
+# BICEP2/Keck Array/Planck joint likelihood
 #
 # Default settings for data selection and foregrounds of the 
 # "fiducial analysis" described in Section III B
