--- a/batch2/BKPlanckonly.ini
+++ b/batch2/BKPlanckonly.ini
@@ -5,7 +5,7 @@
 # File: BKPlanckonly.ini
 # Date: 2015-01-27
 #
-# BICEP2/Keck Array/Planck joint likelihood: Fiducial Analysis
+# BICEP2/Keck Array/Planck joint likelihood
 #
 # Default settings for the "fiducial analysis" described in Section III B and Figure 6
 # of A Joint Analysis of BICEP2/Keck Array and Planck Data
