add description of parameters

--- a/batch2/BKPlanck.ini
+++ b/batch2/BKPlanck.ini
@@ -37,14 +37,24 @@ cmb_dataset[BKPLANCK,use_max] = 5
 
 # Foreground parameters used for fiducial model.
 # All parameters fixed except for BBdust and BBbetadust.
+
+# dust power at ell=80, nu=353 GHz
 param[BBdust] = 3 0 15 0.1 0.1
+# sync power at ell=80, nu=353 GHz
 param[BBsync] = 0.
+# dust spatial power spectrum power law index
 param[BBalphadust] = -0.42
+# dust SED spectral index 
 param[BBbetadust] = 1.59 1.04 2.14 0.02 0.02
+# dust SED temperature
 param[BBTdust] = 19.6
+# synch spatial power spectrum power law index
 param[BBalphasync] = -0.6
+# synch spectral index 
 param[BBbetasync] = -3.3
+# correlation between dust and sync
 param[BBdustsynccorr] = 0.0
+# EE/BB ratios
 param[EEtoBB_dust] = 2
 param[EEtoBB_sync] = 2
 
