--- a/batch2/BKPlanck.ini
+++ b/batch2/BKPlanck.ini
@@ -38,15 +38,15 @@ cmb_dataset[BKPLANCK,use_max] = 5
 # Foreground parameters used for fiducial model.
 # All parameters fixed except for BBdust and BBbetadust.
 
-# dust power at ell=80, nu=353 GHz
+# dust power at ell=80, nu=353 GHz [muK^2]
 param[BBdust] = 3 0 15 0.1 0.1
-# sync power at ell=80, nu=150 GHz
+# sync power at ell=80, nu=150 GHz [muK^2]
 param[BBsync] = 0.
 # dust spatial power spectrum power law index
 param[BBalphadust] = -0.42
 # dust SED spectral index 
 param[BBbetadust] = 1.59 1.04 2.14 0.02 0.02
-# dust SED temperature
+# dust SED temperature [K]
 param[BBTdust] = 19.6
 # synch spatial power spectrum power law index
 param[BBalphasync] = -0.6
