fix the paths for ini file inclusion

--- a/batch2/BKPlanck/BKPlanck_01_fiducial.ini
+++ b/batch2/BKPlanck/BKPlanck_01_fiducial.ini
@@ -24,7 +24,7 @@
 
 
 # BKPLANCK foreground and data selection settings for the fiducial analysis
-DEFAULT(batch2/BKPlanckonly.ini)
+DEFAULT(batch2/BKPlanck/BKPlanckonly.ini)
 # General settings
 DEFAULT(batch2/common.ini)
 
