--- a/batch2/BKPlanck/BKPlanckonly.ini
+++ b/batch2/BKPlanck/BKPlanckonly.ini
@@ -28,7 +28,7 @@
 #       as well as matching .ini files for getdist are available on http://bicepkeck.org/
 
 # Get default data set and foreground parameters
-DEFAULT(BKPlanck.ini)
+DEFAULT(batch2/BKPlanck/BKPlanck.ini)
 
 # for r>0 also need compute_tensors=T:
 compute_tensors = T
