--- a/batch2/BKPlanck/BKPlanck_07_sync000_dist.ini
+++ b/batch2/BKPlanck/BKPlanck_07_sync000_dist.ini
@@ -2,19 +2,20 @@
 # The BICEP2/Keck and Planck Collaborations, A Joint Analysis of BICEP2/Keck Array and Planck Data
 # http://bicepkeck.org/
 #
-# File: BKPlanck_01_fiducial_dist.ini 
+# File: BKPlanck_07_sync000_dist.ini 
 # Date: 2015-01-26
 #
 # BICEP2/Keck Array/Planck joint likelihood
 # 
 # The file contains the input parameters to CosmoMC's getdist to reproduce the
-# likelihoods of the fiducial analysis in Section III B and Figure 6
-# of A Joint Analysis of BICEP2/Keck Array and Planck Data
+# likelihoods of the variations to the fiducial analysis 
+# Adding synchroton uncorr.
+# See Section III C and Figure 8 of A Joint Analysis of BICEP2/Keck Array and Planck Data
 # using CosmoMC release Jan 2015
 
-file_root = chains/BKPlanck_01_fiducial/BKPlanck
-out_dir = dists/BKPlanck_01_fiducial
-plot_data_dir = dists/BKPlanck_01_fiducial
+file_root = chains/BKPlanck_07_sync000/BKPlanck
+out_dir = dists/BKPlanck_07_sync000
+plot_data_dir = dists/BKPlanck_07_sync000
 chain_num = -1
 
 # Need to give limits if prior cuts off distribution where not very small
@@ -22,6 +23,7 @@ limits[r] = 0 N
 limits[rBB] = 0 N
 limits[r02]= 0 N
 limits[r10]= 0 N
+limits[BBsync] = 0 N
 
 # if zero, columnnum calculated automatically as total number of columns
 columnnum  = 0
@@ -109,7 +111,7 @@ plot_2D_param = 0
 # if above zero, instead plot just these combinations:
 # if both zero it will plot most correlated variables
 plot_2D_num = 1
-plot1 = r BBdust
+plot1 = BBsync BBdust
 plot2 =
 
 # number of sample plots, colored by third parameter
