--- a/batch2/BKPlanck/BKPlanck_09_lensing_dist.ini
+++ b/batch2/BKPlanck/BKPlanck_09_lensing_dist.ini
@@ -2,19 +2,20 @@
 # The BICEP2/Keck and Planck Collaborations, A Joint Analysis of BICEP2/Keck Array and Planck Data
 # http://bicepkeck.org/
 #
-# File: BKPlanck_01_fiducial_dist.ini 
+# File: BKPlanck_09_lensing_dist.ini 
 # Date: 2015-01-26
 #
 # BICEP2/Keck Array/Planck joint likelihood
 # 
 # The file contains the input parameters to CosmoMC's getdist to reproduce the
-# likelihoods of the fiducial analysis in Section III B and Figure 6
-# of A Joint Analysis of BICEP2/Keck Array and Planck Data
+# likelihoods of the variations to the fiducial analysis 
+# Varying the lensing amplitude
+# See Section III C and Figure 9 of A Joint Analysis of BICEP2/Keck Array and Planck Data
 # using CosmoMC release Jan 2015
 
-file_root = chains/BKPlanck_01_fiducial/BKPlanck
-out_dir = dists/BKPlanck_01_fiducial
-plot_data_dir = dists/BKPlanck_01_fiducial
+file_root = chains/BKPlanck_09_lensing/BKPlanck
+out_dir = dists/BKPlanck_09_lensing
+plot_data_dir = dists/BKPlanck_09_lensing
 chain_num = -1
 
 # Need to give limits if prior cuts off distribution where not very small
@@ -108,9 +109,9 @@ plot_2D_param = 0
 
 # if above zero, instead plot just these combinations:
 # if both zero it will plot most correlated variables
-plot_2D_num = 1
-plot1 = r BBdust
-plot2 =
+plot_2D_num = 2
+plot1 = r Alens
+plot2 = BBdust Alens
 
 # number of sample plots, colored by third parameter
 # if last parameter is 0 or -1 colored by the parameter most correlated
