--- a/batch2/BKPlanck/BKPlanckonly.ini
+++ b/batch2/BKPlanck/BKPlanckonly.ini
@@ -3,7 +3,7 @@
 # http://bicepkeck.org/
 #
 # File: BKPlanckonly.ini
-# Date: 2015-01-27
+# Date: 2015-01-29
 #
 # BICEP2/Keck Array/Planck joint likelihood
 #
@@ -19,13 +19,15 @@
 #     frequency scaling parameter).
 #   * Invokes the cosmological parameters as used in the Joint Analysis
 #
-# Note: See BKPlanck_01_fiducial.ini to have a full running CosmoMC setup that
+# Note: See BKPlanck_01_fiducial.ini in CosmoMC's batch2/BKPlanck folder 
+#       or http://bicepkeck.org/ to have a full running CosmoMC setup that
 #       invokes this .ini file.
 #
 # Note: .ini files for the "variations from the fiducial data set and model"
 #       described in Secs. III C and Figs. 7, 8, and 9 of 
 #       A Joint Analysis of BICEP2/Keck Array and Planck Data
-#       as well as matching .ini files for getdist are available on http://bicepkeck.org/
+#       as well as matching .ini files for getdist are available on 
+#       in CosmoMC's batch2/BKPlanck folder or http://bicepkeck.org/
 
 # Get default data set and foreground parameters
 DEFAULT(batch2/BKPlanck/BKPlanck.ini)
