--- a/batch2/BKPlanck/BKPlanck_02_y1y2.ini
+++ b/batch2/BKPlanck/BKPlanck_02_y1y2.ini
@@ -2,27 +2,22 @@
 # The BICEP2/Keck and Planck Collaborations, A Joint Analysis of BICEP2/Keck Array and Planck Data
 # http://bicepkeck.org/
 #
-# File: BKPlanck_01_fiducial.ini 
+# File: BKPlanck_02_y1y2.ini 
 # Date: 2015-01-29
 #
 # BICEP2/Keck Array/Planck joint likelihood
 # 
 # The file contains the input parameters to CosmoMC to reproduce the
-# likelihoods of the fiducial analysis in Section III B and Figure 6
-# of A Joint Analysis of BICEP2/Keck Array and Planck Data
+# likelihoods of the variations to the fiducial analysis
+# Choice of the Planck single-frequency spectra
+# See Section III C and Figure 7 of A Joint Analysis of BICEP2/Keck Array and Planck Data
 # using CosmoMC release Jan 2015
 #
 # For details of the setup see BKPlanckonly.ini and BKPlanck.ini
 # and comments therein.
 #
-# Note: Once the chains are created, use the BKPlanck_01_fiducial_dist.ini as input to
+# Note: Once the chains are created, use the BKPlanck_02_y1y2_dist.ini as input to
 #       CosmoMC's getdist to produce smooth likelihoods.
-#
-# Note: .ini files for the "variations from the fiducial data set and model"
-#       described in Secs. III C and Figs. 7, 8, and 9 of 
-#       A Joint Analysis of BICEP2/Keck Array and Planck Data
-#       as well as matching .ini files for getdist are available in
-#       CosmoMC's batch2/BKPlanck folder or on http://bicepkeck.org/
 
 
 # BKPLANCK foreground and data selection settings for the fiducial analysis
@@ -34,7 +29,10 @@ DEFAULT(batch2/common.ini)
 file_root = BKPlanck
 
 # Folder where files (chains, checkpoints, etc.) are stored
-root_dir = chains/BKPlanck_01_fiducial/
+root_dir = chains/BKPlanck_02_y1y2/
+
+# BKPLANCK - only the year split instead
+cmb_dataset[BKPLANCK]=%DATASETDIR%BKPlanck_year_comb_dust/BKPlanck_year_comb_dust.dataset
 
 # From fiducial analysis run
 propose_matrix = planck_covmats/BKPlanck.covmat
