--- a/batch2/BKPlanck/BKPlanck_04_no217_dist.ini
+++ b/batch2/BKPlanck/BKPlanck_04_no217_dist.ini
@@ -2,19 +2,20 @@
 # The BICEP2/Keck and Planck Collaborations, A Joint Analysis of BICEP2/Keck Array and Planck Data
 # http://bicepkeck.org/
 #
-# File: BKPlanck_01_fiducial_dist.ini 
+# File: BKPlanck_04_no217_dist.ini 
 # Date: 2015-01-26
 #
 # BICEP2/Keck Array/Planck joint likelihood
 # 
 # The file contains the input parameters to CosmoMC's getdist to reproduce the
-# likelihoods of the fiducial analysis in Section III B and Figure 6
-# of A Joint Analysis of BICEP2/Keck Array and Planck Data
+# likelihoods of the variations to the fiducial analysis
+# Using only 150 and 353 GHZ
+# See Section III C and Figure 7 of A Joint Analysis of BICEP2/Keck Array and Planck Data
 # using CosmoMC release Jan 2015
 
-file_root = chains/BKPlanck_01_fiducial/BKPlanck
-out_dir = dists/BKPlanck_01_fiducial
-plot_data_dir = dists/BKPlanck_01_fiducial
+file_root = chains/BKPlanck_04_no217/BKPlanck
+out_dir = dists/BKPlanck_04_no217
+plot_data_dir = dists/BKPlanck_04_no217
 chain_num = -1
 
 # Need to give limits if prior cuts off distribution where not very small
