--- a/batch2/BKPlanck/BKPlanck_06_relaxalphad_dist.ini
+++ b/batch2/BKPlanck/BKPlanck_06_relaxalphad_dist.ini
@@ -2,19 +2,20 @@
 # The BICEP2/Keck and Planck Collaborations, A Joint Analysis of BICEP2/Keck Array and Planck Data
 # http://bicepkeck.org/
 #
-# File: BKPlanck_01_fiducial_dist.ini 
-# Date: 2015-01-26
+# File: BKPlanck_06_relaxalphad_dist.ini 
+# Date: 2015-01-28
 #
 # BICEP2/Keck Array/Planck joint likelihood
 # 
 # The file contains the input parameters to CosmoMC's getdist to reproduce the
-# likelihoods of the fiducial analysis in Section III B and Figure 6
-# of A Joint Analysis of BICEP2/Keck Array and Planck Data
+# likelihoods of the variations to the fiducial analysis 
+# Varying the dust power spectrum shape
+# See Section III C of A Joint Analysis of BICEP2/Keck Array and Planck Data
 # using CosmoMC release Jan 2015
 
-file_root = chains/BKPlanck_01_fiducial/BKPlanck
-out_dir = dists/BKPlanck_01_fiducial
-plot_data_dir = dists/BKPlanck_01_fiducial
+file_root = chains/BKPlanck_10_relaxalphad/BKPlanck
+out_dir = dists/BKPlanck_10_relaxalphad
+plot_data_dir = dists/BKPlanck_10_relaxalphad
 chain_num = -1
 
 # Need to give limits if prior cuts off distribution where not very small
