--- a/batch2/BKPlanck/BKPlanck_09_lensing.ini
+++ b/batch2/BKPlanck/BKPlanck_09_lensing.ini
@@ -2,28 +2,22 @@
 # The BICEP2/Keck and Planck Collaborations, A Joint Analysis of BICEP2/Keck Array and Planck Data
 # http://bicepkeck.org/
 #
-# File: BKPlanck_01_fiducial.ini 
+# File: BKPlanck_09_lensing.ini 
 # Date: 2015-01-29
 #
 # BICEP2/Keck Array/Planck joint likelihood
 # 
 # The file contains the input parameters to CosmoMC to reproduce the
-# likelihoods of the fiducial analysis in Section III B and Figure 6
-# of A Joint Analysis of BICEP2/Keck Array and Planck Data
+# likelihoods of the variations to the fiducial analysis 
+# Varying the lensing amplitude
+# See Section III C and Figure 9 of A Joint Analysis of BICEP2/Keck Array and Planck Data
 # using CosmoMC release Jan 2015
 #
 # For details of the setup see BKPlanckonly.ini and BKPlanck.ini
 # and comments therein.
 #
-# Note: Once the chains are created, use the BKPlanck_01_fiducial_dist.ini as input to
+# Note: Once the chains are created, use the BKPlanck_09_lensing_dist.ini as input to
 #       CosmoMC's getdist to produce smooth likelihoods.
-#
-# Note: .ini files for the "variations from the fiducial data set and model"
-#       described in Secs. III C and Figs. 7, 8, and 9 of 
-#       A Joint Analysis of BICEP2/Keck Array and Planck Data
-#       as well as matching .ini files for getdist are available in
-#       CosmoMC's batch2/BKPlanck folder or on http://bicepkeck.org/
-
 
 # BKPLANCK foreground and data selection settings for the fiducial analysis
 DEFAULT(batch2/BKPlanckonly.ini)
@@ -34,7 +28,14 @@ DEFAULT(batch2/common.ini)
 file_root = BKPlanck
 
 # Folder where files (chains, checkpoints, etc.) are stored
-root_dir = chains/BKPlanck_01_fiducial/
+root_dir = chains/BKPlanck_09_lensing/
+
+# Allow lensing amplitude to vary - center, min, max, start width, propose width:
+param[Alens] = 1 0 2.5 0.05 0.05
+
+# Use first nine ell bins.
+cmb_dataset[BKPLANCK,use_min] = 1
+cmb_dataset[BKPLANCK,use_max] = 9
 
 # From fiducial analysis run
 propose_matrix = planck_covmats/BKPlanck.covmat
