add setting edition to gui; setting restructuring; bug fixes and setting support; tidy inis

--- a/disttest.ini
+++ b/disttest.ini
@@ -1,11 +1,11 @@
 DEFAULT(batch2/getdist_common.ini)
 
-file_root = C:\tmp\Planck\final_Nov14\base\plikHM_TT_lowTEB\base_plikHM_TT_lowTEB_post_BAO
-#C:\tmp\Planck\final_nominal\PLA\base\planck_lowl_lowLike\base_planck_lowl_lowLike
+file_root = PLA/base/plikHM_TT_lowTEB_lensing/base_plikHM_TT_lowTEB_lensing
+#ingore_rows=0.3 is good for new chains, zero is good for burn-removed chains as in the PLA
 ignore_rows=0
 
 #plot_data_dir is where output plotting files are stored. The directory must exist.
-plot_data_dir=z://plot_data
+plot_data_dir= ./plot_data
 
 plot_2D_num = 1
 plot1 = ns omegabh2
@@ -13,5 +13,8 @@ plot1 = ns omegabh2
 
 out_dir = ./
 no_tests=T
+
+#set no_plots=F if you want plot_data generated. 
+#(you can now plot without pre-generating plot_data files)
 no_plots=T
 
