--- a/test.ini
+++ b/test.ini
@@ -1,14 +1,15 @@
-#DEFAULT(batch2/nonclik.ini)
-DEFAULT(batch2/CAMspec_TT.ini)
-DEFAULT(batch2/lowTEB.ini)
-#DEFAULT(batch2/lowl.ini)
+#general settings
+#Bicep-Keck-Planck, varying cosmological parameters
+DEFAULT(batch2/BKPlanck.ini)
 
-#planck lensing
-DEFAULT(batch2/lensing.ini)
+#Planck 2015
+#DEFAULT(batch2/plik_dx11dr2_HM_v18_TT.ini)
+#DEFAULT(batch2/lowTEB.ini)
+#DEFAULT(batch2/lowl.ini)
+#DEFAULT(batch2/lensing.ini)
 
 #Other Likelihoods
-DEFAULT(batch2/BAO.ini)
-#DEFAULT(batch2/HST.ini)
+#DEFAULT(batch2/BAO.ini)
 #DEFAULT(batch2/WiggleZ_MPK.ini)
 #DEFAULT(batch2/MPK.ini)
 #DEFAULT(batch2/WL.ini)
@@ -16,9 +17,10 @@ DEFAULT(batch2/BAO.ini)
 #general settings
 DEFAULT(batch2/common.ini)
 
-#cmb_dataset[BICEP2]=data/BICEP/BICEP2.dataset
-#for r>0 also need compute_tensors=T:
-compute_tensors = F
+#e.g. to vary r in addition to standard 6:
+#(for r>0 also need compute_tensors=T)
+compute_tensors = T
+param[r] = 0 0 2 0.04 0.04
 
 #high for new runs
 MPI_Max_R_ProposeUpdate = 30
@@ -51,7 +53,7 @@ dragging_steps  = 3
 propose_scale = 2
 
 #Set >0 to make data files for importance sampling
-indep_sample=0
+indep_sample=10
 
 #these are just small speedups for testing
 get_sigma8=T
