--- a/batch2/BKPlanck/BKPlanck_02_y1y2.ini
+++ b/batch2/BKPlanck/BKPlanck_02_y1y2.ini
@@ -21,9 +21,7 @@
 
 
 # BKPLANCK foreground and data selection settings for the fiducial analysis
-DEFAULT(batch2/BKPlanckonly.ini)
-# General settings
-DEFAULT(batch2/common.ini)
+DEFAULT(BKPlanck_01_fiducial.ini)
 
 # Root name for files produced
 file_root = BKPlanck
@@ -34,8 +32,3 @@ root_dir = chains/BKPlanck_02_y1y2/
 # BKPLANCK - only the year split instead
 cmb_dataset[BKPLANCK]=%DATASETDIR%BKPlanck/BKPlanck_year_comb_dust.dataset
 
-# From fiducial analysis run
-propose_matrix = planck_covmats/BKPlanck.covmat
-
-# if Planck likelihood code not installed...
-use_clik = F
