--- a/batch2/BKPlanck/BKPlanck_03_9bins.ini
+++ b/batch2/BKPlanck/BKPlanck_03_9bins.ini
@@ -20,9 +20,7 @@
 #       CosmoMC's getdist to produce smooth likelihoods.
 
 # BKPLANCK foreground and data selection settings for the fiducial analysis
-DEFAULT(batch2/BKPlanckonly.ini)
-# General settings
-DEFAULT(batch2/common.ini)
+DEFAULT(BKPlanck_01_fiducial.ini)
 
 # Root name for files produced
 file_root = BKPlanck
@@ -34,8 +32,3 @@ root_dir = chains/BKPlanck_03_9bins/
 cmb_dataset[BKPLANCK,use_min] = 1
 cmb_dataset[BKPLANCK,use_max] = 9
 
-# From fiducial analysis run
-propose_matrix = planck_covmats/BKPlanck.covmat
-
-# if Planck likelihood code not installed...
-use_clik = F
