--- a/batch2/BKPlanck/BKPlanck_04_no217.ini
+++ b/batch2/BKPlanck/BKPlanck_04_no217.ini
@@ -20,9 +20,7 @@
 #       CosmoMC's getdist to produce smooth likelihoods.
 
 # BKPLANCK foreground and data selection settings for the fiducial analysis
-DEFAULT(batch2/BKPlanckonly.ini)
-# General settings
-DEFAULT(batch2/common.ini)
+DEFAULT(BKPlanck_01_fiducial.ini)
 
 # Root name for files produced
 file_root = BKPlanck
@@ -33,8 +31,3 @@ root_dir = chains/BKPlanck_04_no217/
 # Choose B2+KECK and P353 but not P217
 cmb_dataset[BKPLANCK,maps_use] = B2K_B P353_B
 
-# From fiducial analysis run
-propose_matrix = planck_covmats/BKPlanck.covmat
-
-# if Planck likelihood code not installed...
-use_clik = F
