--- a/batch2/BKPlanck/BKPlanck_06_relaxalphad.ini
+++ b/batch2/BKPlanck/BKPlanck_06_relaxalphad.ini
@@ -20,9 +20,7 @@
 #       CosmoMC's getdist to produce smooth likelihoods.
 
 # BKPLANCK foreground and data selection settings for the fiducial analysis
-DEFAULT(batch2/BKPlanckonly.ini)
-# General settings
-DEFAULT(batch2/common.ini)
+DEFAULT(BKPlanck_01_fiducial.ini)
 
 # Root name for files produced
 file_root = BKPlanck
@@ -33,8 +31,3 @@ root_dir = chains/BKPlanck_06_relaxalphad/
 # Allow alpha_dust to vary from -0.8 to 0  - center, min, max, start width, propose width
 param[BBalphadust] = -0.42 -0.8 0 0.01 0.01
 
-# From fiducial analysis run
-propose_matrix = planck_covmats/BKPlanck.covmat
-
-# if Planck likelihood code not installed...
-use_clik = F
