--- a/batch2/BKPlanck/BKPlanck_08_sync100.ini
+++ b/batch2/BKPlanck/BKPlanck_08_sync100.ini
@@ -20,9 +20,7 @@
 #       CosmoMC's getdist to produce smooth likelihoods.
 
 # BKPLANCK foreground and data selection settings for the fiducial analysis
-DEFAULT(batch2/BKPlanckonly.ini)
-# General settings
-DEFAULT(batch2/common.ini)
+DEFAULT(BKPlanck_01_fiducial.ini)
 
 # Root name for files produced
 file_root = BKPlanck
@@ -42,8 +40,3 @@ param[BBsync] = 0.00001 0 0.00005 0.00001 0.00001
 # BKPLANCK - Set to 100% dust-sync correlation
 param[BBdustsynccorr] = 1.0
 
-# From fiducial analysis run
-propose_matrix = planck_covmats/BKPlanck.covmat
-
-# if Planck likelihood code not installed...
-use_clik = F
