--- a/batch2/BKPlanckonly.ini
+++ b/batch2/BKPlanckonly.ini
@@ -30,7 +30,7 @@
 #       in CosmoMC's batch2/BKPlanck folder or http://bicepkeck.org/
 
 # Get default data set and foreground parameters
-DEFAULT(batch2/BKPlanck/BKPlanck.ini)
+DEFAULT(BKPlanck.ini)
 
 # for r>0 also need compute_tensors=T:
 compute_tensors = T
