--- a/batch2/BKPlanck/BKPlanck_05_relaxbetad.ini
+++ b/batch2/BKPlanck/BKPlanck_05_relaxbetad.ini
@@ -20,9 +20,7 @@
 #       CosmoMC's getdist to produce smooth likelihoods.
 
 # BKPLANCK foreground and data selection settings for the fiducial analysis
-DEFAULT(batch2/BKPlanckonly.ini)
-# General settings
-DEFAULT(batch2/common.ini)
+DEFAULT(BKPlanck_01_fiducial.ini)
 
 # Root name for files produced
 file_root = BKPlanck
@@ -33,8 +31,3 @@ root_dir = chains/BKPlanck_05_relaxbetad/
 # Relax the Gaussian prior on BBbetadust: center value = 1.59, width = 0.33
 prior[BBbetadust] = 1.59 0.33
 
-# From fiducial analysis run
-propose_matrix = planck_covmats/BKPlanck.covmat
-
-# if Planck likelihood code not installed...
-use_clik = F
