--- a/batch2/BKPlanck/BKPlanck_07_sync000.ini
+++ b/batch2/BKPlanck/BKPlanck_07_sync000.ini
@@ -20,9 +20,7 @@
 #       CosmoMC's getdist to produce smooth likelihoods.
 
 # BKPLANCK foreground and data selection settings for the fiducial analysis
-DEFAULT(batch2/BKPlanckonly.ini)
-# General settings
-DEFAULT(batch2/common.ini)
+DEFAULT(BKPlanck_01_fiducial.ini)
 
 # Root name for files produced
 file_root = BKPlanck
@@ -39,8 +37,3 @@ cmb_dataset[BKPLANCK,maps_use] = B2K_B P030_B P044_B P070_B P100_B P143_B P217_B
 # BKPLANCK - allow sync to vary
 param[BBsync] = 0.0001 0 0.0007 0.0001 0.0001
 
-# From fiducial analysis run
-propose_matrix = planck_covmats/BKPlanck.covmat
-
-# if Planck likelihood code not installed...
-use_clik = F
