change to make BKP-only runs faster (transfer functions not recomputed)

--- a/batch2/BKPlanckonly.ini
+++ b/batch2/BKPlanckonly.ini
@@ -32,6 +32,12 @@
 # Get default data set and foreground parameters
 DEFAULT(BKPlanck.ini)
 
+#Don't need to recompute transfer functions, since fiducial scalar parameters fixed
+block_semi_fast = T
+
+#Don't usually need data, fast to run full chains
+indep_sample=0
+
 # for r>0 also need compute_tensors=T:
 compute_tensors = T
 
