fix for _lensing case; gui fix

--- a/batch2/BKPlanck/BKPlanck_09_lensing.ini
+++ b/batch2/BKPlanck/BKPlanck_09_lensing.ini
@@ -22,6 +22,10 @@
 # BKPLANCK foreground and data selection settings for the fiducial analysis
 DEFAULT(BKPlanck_01_fiducial.ini)
 
+#currently need to recompute transfers for Alens
+block_semi_fast = F
+sampling_method = 7
+
 # Root name for files produced
 file_root = BKPlanck
 
