--- a/batch2/BKPlanckonly.ini
+++ b/batch2/BKPlanckonly.ini
@@ -38,6 +38,10 @@ block_semi_fast = T
 #Don't usually need data, fast to run full chains
 indep_sample=0
 
+#get well converged for plotting the odd shape  
+MPI_Limit_Converge_Err = 0.1
+sampling_method = 1
+
 # for r>0 also need compute_tensors=T:
 compute_tensors = T
 
