more fixes to the file header to accomodate new README file name and location

--- a/batch2/BKPlanck.ini
+++ b/batch2/BKPlanck.ini
@@ -19,6 +19,9 @@
 #     BBdust (dust power at ell=80, nu=353 GHz) and BBbetadust (dust
 #     frequency scaling parameter).
 #
+# Note: See BKPlanck_README.txt for an overview of the files contained in the 
+#       BICEP2/Keck Array and Planck Joint Analysis CosmoMC data release.
+#
 # Note: See BKPlanckonly.ini and notes therein to reproduce the 
 #       "fiducial analysis" and variations thereof
 
