--- a/batch2/BKPlanckonly.ini
+++ b/batch2/BKPlanckonly.ini
@@ -19,6 +19,9 @@
 #     frequency scaling parameter).
 #   * Invokes the cosmological parameters as used in the Joint Analysis
 #
+# Note: See BKPlanck_README.txt for an overview of the files contained in the 
+#       BICEP2/Keck Array and Planck Joint Analysis CosmoMC data release.
+#
 # Note: See BKPlanck_01_fiducial.ini in CosmoMC's batch2/BKPlanck folder 
 #       or http://bicepkeck.org/ to have a full running CosmoMC setup that
 #       invokes this .ini file.
