--- a/distparams.ini
+++ b/distparams.ini
@@ -6,7 +6,7 @@ columnnum  = 0
 file_root = chains/test
 out_root = 
 out_dir = 
-plot_data = ./plot_data/
+plot_data_dir = ./plot_data/
 
 #If 0 assume 1 and no chain filename prefixes; if -1 read as many as exist
 chain_num = -1
