tidy of 2d python code

--- a/python/getdist/analysis_defaults.ini
+++ b/python/getdist/analysis_defaults.ini
@@ -28,5 +28,8 @@ boundary_correction_method=1
 #For 2D this is the smoothing scale relative to the bin size
 smooth_scale_2D =2
 
+#maximum correlation ellipticity to allow for 2D kernels
+max_corr_2D = 0.95
+
 #for 3d plots
 max_scatter_points = 2000
