--- a/python/getdist/analysis_defaults.ini
+++ b/python/getdist/analysis_defaults.ini
@@ -21,8 +21,15 @@ smooth_scale_1D =0.25
 #if < 0 uses automatic smoothing length (changes with parameter)
 #-the overall smoothing length is scaled by abs(smooth_scale_1D) from very crude guess at best overall scale
 
+#0 is basic normalization correction
+#1 is linear boundary kernel (should get gradient correct)
+boundary_correction_method=1
+
 #For 2D this is the smoothing scale relative to the bin size
 smooth_scale_2D =2
+
+#maximum correlation ellipticity to allow for 2D kernels
+max_corr_2D = 0.95
 
 #for 3d plots
 max_scatter_points = 2000
