linear boundary correction and contour smooth correction for 2D plots in python

--- a/python/getdist/analysis_defaults.ini
+++ b/python/getdist/analysis_defaults.ini
@@ -25,10 +25,12 @@ smooth_scale_1D =0.25
 #1 is linear boundary kernel (should get gradient correct)
 boundary_correction_method=1
 
+smooth_correct_contours = T
+
 #For 2D this is the smoothing scale relative to the bin size
 smooth_scale_2D =2
 
-#maximum correlation ellipticity to allow for 2D kernels
+#maximum correlation ellipticity to allow for 2D kernels. Set to 0 to force non-elliptical.
 max_corr_2D = 0.95
 
 #for 3d plots
