converge tests now working in python

--- a/python/getdist/analysis_defaults.ini
+++ b/python/getdist/analysis_defaults.ini
@@ -9,6 +9,7 @@ contour3 = 0.99
 #Note credible interval depend on smoothing
 credible_interval_threshold = 0.05
 
+converge_test_limit = 0.95
 
 #Number of output bins for plotting, and relative scale of the Gaussian kernel
 #Should check plots are robust to changes in these parameters.
